--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://Jorav.github.io/birds/birds-browser/wwwroot/index.html">
+<meta http-equiv="refresh" content="0; url=https://jorav.github.io/Birds/">
